# mustard

./: CMakeLists.txt  Makefile  README.md  trace.txt
baselines/cusolver_Mg/: CMakeLists.txt  Makefile
baselines/starpu/lu/: CMakeLists.txt  Makefile
containers/: build_container.sh  build_mustard.sh  container.def  slurm_job.sh
mustard/: CMakeLists.txt  Makefile  lu_mustard_p.cu
mustard/old/: lu_partg_fuse.cu
scripts/: plot.py
src/baselines/cholesky/MgPotrf/: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake  cusolver_MgPotrf_example1  cusolver_MgPotrf_example1.cu  cusolver_MgPotrf_example2
src/baselines/cholesky/slate/: .gitignore  chol_slate.cc  mmake.sh
src/baselines/cusolver_Mg/: .gitignore  Makefile  cusolver_MgGetrf_example  cusolver_MgGetrf_example.cu  cusolver_MgPotrf_example1
src/baselines/lu/MgGetrf/: .gitignore  CMakeCache.txt  Makefile  Makefile copy  cmake_install.cmake  cusolver_MgGetrf_example  cusolver_MgGetrf_example.cu
src/baselines/lu/slate/: .gitignore  mmake.sh
src/baselines/slate/: .gitignore  chol_slate.cc  lu_slate.cc  mmake.sh
src/baselines/starpu/cholesky/: .gitignore  Makefile  cholesky.h  cholesky_kernels.c  cholesky_tile_tag.c
src/baselines/starpu/common/: blas.c  blas.h
src/baselines/starpu/lu/: .gitignore
src/include/: gen.h  utils.h
src/mustard/: Makefile  Makefile.save  broker_queue.h  broker_queue_nvshmem.h  cholesky_partg_occupancy_nvshmem.cu  env.sh  env_local.sh  lu_partg_fuse.cu  lu_partg_nvshmem.cu  lu_partg_occupancy_nvshmem.cu  mustard.h  res.txt
src/mustard/blas_tests/: Makefile  blas_tests.cu  graph_0.dot  graph_1.dot  graph_2.dot  graph_3.dot
src/mustard/single_gpu/: broker_queue.h  chol_def  chol_def.cu  chol_new.cu  lu_def  lu_partg  lu_partg.cu  lu_partg_multistream.cu  lu_partg_multiworkspace.cu  lu_partg_predep.cu
src/res/: .gitignore  chol_all.sh  collect.sh  collect_chol.sh  collect_data.sh  collect_data_cholesky.sh  lu_all.sh  plot_data copy.py  plot_data.py
